--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "material-ui": "^0.20.2",
     "mdb-react-ui-kit": "^6.2.0",
     "moment": "^2.29.4",
+    "openai": "^4.52.7",
     "primereact": "^9.6.2",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
